test/expected/declare_xxi-c17.out
declare x as constexpr int
             ^
14: error: "constexpr": unsupported keyword until C23
